Fix white-space wrap + bold header support

--- a/client/src/webview.css
+++ b/client/src/webview.css
@@ -5,7 +5,7 @@ in extension.ts*/
 #workspace,
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 #workspace #inspector li a:hover,
